location and interests

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "chart.js": "^2.7.2",
     "chartjs-plugin-datalabels": "^0.3.0",
     "classnames": "2.2.6",
+    "country-list": "^1.1.0",
     "draft-js": "^0.10.5",
     "fine-uploader": "^5.16.2",
     "firebase": "^5.3.0",
